# nebc

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic_business.neb  basic_data_structures.neb  basic_demo.neb  basic_dice_game.neb  basic_math.neb  basic_true_false.neb  iteration.neb
src/: debug.rs  lib.rs  main.rs
src/ast/: mod.rs  nodes.rs  types.rs
src/codegen/: common.rs  expression_generator.rs  mod.rs  print_generator.rs  protection.rs  quantum_asm.rs  statement_generator.rs
src/compiler/: analyzer.rs  codegen.rs  error.rs  lexer.rs  mod.rs  parser.rs
src/compiler/parser/: common.rs  expression_parser.rs  statement_parser.rs
