[package]
name = "nebc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nebc"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"], optional = true }
clap = { version = "4.5.49", features = ["derive"] }
logos = "0.15.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
target-lexicon = "0.13.3"
thiserror = "2.0.17"

[features]
default = ["secure-compilation"]
secure-compilation = ["chrono"]
lightweight = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1
debug = true
